--- a/MegaboxClone/Base.lproj/Main.storyboard
+++ b/MegaboxClone/Base.lproj/Main.storyboard
@@ -1314,6 +1314,9 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="59" height="50.5"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="didTouchedKakaoLoginButton:" destination="0ZL-rZ-ez3" eventType="touchUpInside" id="Ptn-qv-EC9"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -1391,9 +1394,6 @@
                             <constraint firstItem="ccG-A0-ie6" firstAttribute="leading" secondItem="ClT-Ar-XOq" secondAttribute="leading" constant="20" id="zwt-yi-uEj"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="kakaoLoginButton" destination="OC7-Mg-3Ev" id="KGS-Sk-5hC"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hKr-hV-60X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
